securitygroups.tf
resource "aws_security_group" "example-alb-security-group" {
  name        = "${var.name_prefix}-alb-security-group"
  vpc_id      = "${var.vpc_id}"
  description = "${var.name_prefix}- ALB security group"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
